--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ body {
     --color-deep-violet: #4D3CA2;
     --color-soft-pink: #FB8194;
     --color-blue: #3E51FF;
+    --color-stub: #D9D9D9;
 
     --button-gradient: linear-gradient(90deg, #F85032 0%, var(--color-fiery-red) 100%);
 
@@ -154,6 +155,7 @@ body {
 
     --container-width: 1160px;
     --container-padding-x: 15px;
+    --header-min-height: 105px;
 
     --transition-duration: 0.2s;
 
@@ -165,12 +167,14 @@ body {
  }
 
  body {
+  position: relative;
   background-color: var(--color-almost-white);
   color: var(--color-gray);
-  line-height: 1.7;
+  line-height: 1.78;
   font-size: 18px;
   font-family: var(--forn-family);
   font-weight: 400;
+  overflow-x: hidden;
  }
 
  a {
@@ -196,12 +200,13 @@ body {
 
 .button {
   color: var(--color-white);
+  font-size: 16px;
   font-weight: 500;
   letter-spacing: 0.32px;
   text-transform: capitalize;
   border-radius: var(--button-border-radius);
   border: none;
-  padding: 16px 28px;
+  padding: 12px 28px;
   background: var(--button-gradient);
 }
 
@@ -209,11 +214,25 @@ body {
   opacity: 0.9;
 }
 
+.visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  margin: -1px !important;
+  border: 0 !important;
+  padding: 0 !important;
+  white-space: nowrap !important;
+  clip-path: inset(100%) !important;
+  clip: rect(0 0 0 0) !important;
+  overflow: hidden !important;
+}
+
 .header {
   padding-block: 24px;
   display: flex;
   align-items: center;
   column-gap: 100px;
+  min-height: var(--header-min-height);
 }
 
 .header-logo-link {
@@ -226,6 +245,7 @@ body {
   display: flex;
   column-gap: 25px;
   text-transform: capitalize;
+  font-size: 16px;
 }
 
 .header-nav-item {
@@ -264,6 +284,92 @@ body {
 
 .header-burger-icon {
   display: none;
+}
+
+.hero {
+  padding-top: 55px;
+  padding-bottom: 70px;
+  position: relative;
+}
+
+.hero-decorative-title {
+  font-size: 88px;
+  font-weight: 600;
+  line-height: 1.1;
+  letter-spacing: -3.52px;
+  text-transform: capitalize;
+  color: var(--color-charcoal-black);
+  max-width: 720px;
+  padding-bottom: 15px;
+}
+
+.hero-description {
+  max-width: 560px;
+  padding-bottom: 50px;
+}
+
+.hero-form {
+  display: flex;
+  column-gap: 48px;
+  justify-content: space-between;
+  max-width: 825px;
+  padding: 12px 12px 12px 56px;
+  background-color: var(--color-white);
+  box-shadow: 0px 4px 32px 0px rgba(0, 0, 0, 0.10);
+  border-radius: 80px;
+}
+.hero-form-select-wrap {
+}
+.hero-form-select {
+}
+.hero-form-button {
+  padding: 16px 44px;
+  font-size: 18px;
+}
+
+.hero-video-wrapper {
+  position: absolute;
+  top: 0;
+  right: -125px;
+  z-index: -1;
+  margin-top: calc(-1 * var(--header-min-height));
+}
+
+.hero-video-inner {
+  position: relative;
+}
+
+.hero-video-inner::before {
+  position: absolute;
+  content: '';
+  width: 120px;
+  aspect-ratio: 1;
+  left: 50%;
+  top: 50%;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  background: url('./icons/play-icon.svg') no-repeat center/cover;
+}
+
+.hero-video {
+  background-color: var(--color-stub);
+}
+
+.hero-video::before {
+}
+
+.hero-video-button {
+
+}
+.hero-visitors-wrapper {
+}
+.hero-visitors-title {
+}
+.hero-visitors-list {
+}
+.hero-visitors-item {
+}
+.hero-visitors-avatar {
 }
 
 @media (max-width: 1024px) {
