--- a/style.css
+++ b/style.css
@@ -148,6 +148,9 @@ body {
     --color-soft-pink: #FB8194;
     --color-blue: #3E51FF;
     --color-stub: #D9D9D9;
+    --color-misty-gray: #888888;
+    --color-silver-chalice: #CECECE;
+    --color-arctic-mist: #F3F8FA;
 
     --button-gradient: linear-gradient(90deg, #F85032 0%, var(--color-fiery-red) 100%);
 
@@ -308,6 +311,30 @@ body {
   padding-bottom: 15px;
 }
 
+.hero-decorative-title span {
+  display: inline-flex;
+  position: relative;
+  align-items: center;
+}
+
+.hero-decorative-title span::after {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  width: 115px;
+  height: 59px;
+  content: '5.0';
+  padding: 8px 12px 8px 65px;
+  font-size: 24px;
+  color: inherit;
+  left: 110%;
+  letter-spacing: 0;
+  box-shadow: 0px 12px 28px 0px rgba(0, 0, 0, 0.05);
+  border-radius: 40px;
+  background: url('./icons/star.svg') no-repeat;
+  background-position: 15% center;
+}
+
 .hero-description {
   max-width: 560px;
   padding-bottom: 50px;
@@ -322,58 +349,127 @@ body {
   background-color: var(--color-white);
   box-shadow: 0px 4px 32px 0px rgba(0, 0, 0, 0.10);
   border-radius: 80px;
+  margin-bottom: 50px;
+  position: relative;
+  z-index: 100;
 }
+
+.hero-form label {
+  font-size: 14px;
+  color: var(--color-misty-gray);
+  text-transform: capitalize;
+}
+
 .hero-form-select-wrap {
+  position: relative;
 }
+
+.hero-form-select-wrap:not(:nth-last-child(2))::after {
+  content: '';
+  position: absolute;
+  width: 2px;
+  height: 75%;
+  background-color: var(--color-silver-chalice);
+  top: 10px;
+  right: -10px;
+}
+
 .hero-form-select {
+  background-color: transparent;
+  border: none;
+  font-weight: 500;
+  color: var(--color-charcoal-black);
+  appearance: none;
+  background-image: url('./icons/select-arrow.svg');
+  background-position: right;
+  background-repeat: no-repeat;
+  padding-right: 25px;
 }
+
 .hero-form-button {
   padding: 16px 44px;
   font-size: 18px;
+}
+
+.hero-form-button:hover {
+  opacity: 0.9;
 }
 
 .hero-video-wrapper {
   position: absolute;
   top: 0;
   right: -125px;
-  z-index: -1;
 }
 
 .hero-video-inner {
   position: relative;
 }
 
-.hero-video-inner::before {
+.hero-video {
+  background-image: 
+    image-set(
+      url('./images/hero/hero-video-image@2X.avif') type('image/avif') 2x,
+      url('./images/hero/hero-video-image@1X.avif') type('image/avif') 1x,
+      url('./images/hero/hero-video-image@2X.avif') 2x,
+      url('./images/hero/hero-video-image@1X.avif') 1x
+    );
+    background-size: cover;
+    z-index: -1;
+    position: relative;
+    border-bottom-left-radius: 24px;
+}
+
+.hero-video-play-button {
   position: absolute;
-  content: '';
   width: 120px;
   aspect-ratio: 1;
   left: 50%;
   top: 50%;
-  border-radius: 50%;
   transform: translate(-50%, -50%);
-  background: url('./icons/play-icon.svg') no-repeat center/cover;
+  background: url('/icons/play-icon.svg') no-repeat center/cover;
+  border: none;
+  z-index: 300;
 }
 
-.hero-video {
-  background-color: var(--color-stub);
+.hero-video-play-button:hover {
+  opacity: 0.9;
 }
 
-.hero-video::before {
-}
-
-.hero-video-button {
-
-}
 .hero-visitors-wrapper {
 }
+
 .hero-visitors-title {
+  margin-bottom: 25px;
 }
+
 .hero-visitors-list {
+  display: flex;
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--color-white);
 }
-.hero-visitors-item {
+
+.hero-visitors-item:not(:first-child) {
+  margin-left: -11px;
 }
+
+.hero-visitors-item span {
+  margin-left: -5px;
+}
+
+.hero-visitors-item:last-child {
+  background-color: var(--color-deep-violet);
+  border-radius: 50%;
+  width: 54px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .hero-visitors-avatar {
+  border-radius: 50%;
+  border: 2px solid var(--color-arctic-mist)
 }
 
 @media (max-width: 1024px) {
