--- a/style.css
+++ b/style.css
@@ -301,14 +301,16 @@ body {
 }
 
 .hero-decorative-title {
-  font-size: 88px;
+  /* font-size: 88px; */
+  font-size: clamp(54px, 6.10vw, 88px);
   font-weight: 600;
   line-height: 1.1;
   letter-spacing: -3.52px;
   text-transform: capitalize;
   color: var(--color-charcoal-black);
-  max-width: 720px;
-  padding-bottom: 15px;
+  /* max-width: 720px; */
+  max-width: clamp(200px, 50vw, 720px);
+  margin-bottom: 15px;
 }
 
 .hero-decorative-title span {
@@ -331,13 +333,13 @@ body {
   letter-spacing: 0;
   box-shadow: 0px 12px 28px 0px rgba(0, 0, 0, 0.05);
   border-radius: 40px;
-  background: url('./icons/star.svg') no-repeat;
+  background: url('./icons/star.svg') no-repeat, var(--color-white);
   background-position: 15% center;
 }
 
 .hero-description {
   max-width: 560px;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .hero-form {
@@ -426,7 +428,7 @@ body {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  background: url('/icons/play-icon.svg') no-repeat center/cover;
+  background: url('./icons/play-icon.svg') no-repeat center/cover;
   border: none;
   z-index: 300;
 }
@@ -482,6 +484,19 @@ body {
   .header-button {
     margin-left: 0;
   }
+
+  .hero-form {
+    column-gap: 20px;
+  }
+
+  .hero-decorative-title {
+    max-width: 300px;
+  }
+
+  .hero-description {
+    max-width: 35%;
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -500,5 +515,61 @@ body {
 
   .header-burger-icon {
     display: inline-block;
+  }
+
+  .hero {
+    padding-top: 96px;
+  }
+
+  .hero-form {
+    flex-direction: column;
+    padding: 24px 16px;
+    border-radius: 16px;
+    row-gap: 32px;
+  }
+
+  .hero-decorative-title {
+    max-width: 100%;
+    margin-bottom: 24px;
+  }
+
+  .hero-decorative-title span::after {
+    width: 83px;
+    height: 42px;
+    font-size: 17.5px;
+    background-size: 32px 32px;
+    padding-left: 45px;
+  }
+
+  .hero-description {
+    max-width: 100%;
+    margin-bottom: 32px;
+  }
+
+  .hero-form-select-wrap {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .hero-form-select-wrap label {
+    margin-bottom: 15px;
+  }
+
+  .hero-form-select-wrap:not(:nth-last-child(2))::after {
+    width: 100%;
+    height: 2px;
+    right: auto;
+    top: 90px;
+  }
+
+  .hero-video-wrapper {
+    position: relative;
+    right: auto;
+    margin-inline: -15px;
+  }
+
+  .hero-video {
+    width: 100%;
+    height: 570px;
   }
 }
