--- a/style.css
+++ b/style.css
@@ -218,6 +218,9 @@ body {
   line-height: normal;
  }
 
+ .popup .vusible {
+  display: block;
+ }
 
  .container {
   max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
@@ -384,7 +387,7 @@ body {
   border-radius: 80px;
   margin-bottom: 50px;
   position: relative;
-  z-index: 100;
+  z-index: 90;
 }
 
 .hero-form label {
@@ -506,7 +509,7 @@ body {
 
 .sponsors {
   padding-top: 20px;
-  margin-bottom: 135px;
+  margin-bottom: 100px;
 }
 
 .sponsors-description {
@@ -876,7 +879,6 @@ body {
 
 .testimonials-item dd {
   font-size: 15px;
-  line-height: normal;
   text-transform: capitalize;
 }
 
@@ -1116,13 +1118,16 @@ body {
 }
 
 @media (max-width: 767px) {
+  .noscroll {
+    overflow: hidden;
+  }
+
   .button {
     font-size: 14px;
   }
 
   .header {
     justify-content: space-between;
-    padding-block: 10px;
   }
 
   .header-nav {
@@ -1133,8 +1138,42 @@ body {
     display: none;
   }
 
+  .header-nav-list {
+    width: 100%;
+    flex-direction: column;
+    row-gap: 15px;
+    padding: 40px 10px;
+  }
+
+  .header-nav-item {
+    width: 100%;
+
+  }
+
+  .header-nav-link {
+    color: var(--color-white);
+    width: 100%;
+    justify-content: center;
+  }
+
   .header-burger-icon {
     display: inline-block;
+  }
+
+  .popup {
+    position: fixed;
+    top: 85px;
+    right: -100%;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--color-blue);
+    z-index: 1000;
+    display: flex;
+    transition: 0.3s;
+  }
+
+  .popup.open {
+    right: 0;
   }
 
   .hero {
@@ -1214,6 +1253,10 @@ body {
 
   .sponsors-description {
     font-size: 16px;
+  }
+
+  .sponsors {
+    margin-bottom: 60px;
   }
 
   .places {
