--- a/style.css
+++ b/style.css
@@ -465,11 +465,18 @@ body {
 
 .hero-video {
   background-image: 
+  -webkit-image-set(
+    url('./images/hero/hero-video-image@2X.avif') type('image/avif') 2x,
+    url('./images/hero/hero-video-image@1X.avif') type('image/avif') 1x,
+    url('./images/hero/hero-video-image@2X.jpg') type('image/jpeg') 2x,
+    url('./images/hero/hero-video-image@1X.jpg') type('image/jpeg') 1x
+  );
+  background-image: 
     image-set(
       url('./images/hero/hero-video-image@2X.avif') type('image/avif') 2x,
       url('./images/hero/hero-video-image@1X.avif') type('image/avif') 1x,
-      url('./images/hero/hero-video-image@2X.jpg') type("image/jpeg") 2x,
-      url('./images/hero/hero-video-image@1X.jpg') type("image/jpeg") 1x
+      url('./images/hero/hero-video-image@2X.jpg') type('image/jpeg') 2x,
+      url('./images/hero/hero-video-image@1X.jpg') type('image/jpeg') 1x
     );
     background-size: cover;
     z-index: -1;
